Fix:fixed shadow and transition for portfolio cards, moved overflow to .portfolio-thumb

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,12 +43,17 @@ a {
     padding-bottom: 120px;
 }
 .page-header{
+    max-width: 1440px;
+    margin: 0 auto;
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 .header-container{
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    
 }
 .header-navigation{
     display: flex;
@@ -89,13 +94,15 @@ a {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:hover {
+.nav-link:hover,
+.nav-link:focus
+ {
     color: #404BBF;
 }
 .nav-link:active {
     color: #404BBF;
 }
-.nav-link:active::after{
+.current::after{
     content: "";
     width: 100%;
     height: 4px;
@@ -109,7 +116,8 @@ a {
     padding-top: 24px;
     padding-bottom: 24px;
 }
-.contact-link:hover{
+.contact-link:hover,
+.contact-link:focus{
     color: #404BBF;
 }
 .page-title-container{
@@ -137,7 +145,7 @@ a {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
         ),
-    url(/images/people-office.jpg);
+    url(../images/people-office.jpg);
     max-width: 1440px;
     margin: 0 auto;
     background-position: center;
@@ -169,7 +177,8 @@ a {
     
 
 }
-.page-title-button:hover {
+.page-title-button:hover,
+.page-title-button:focus {
     background-color: #404BBF;
 
 }
@@ -269,7 +278,9 @@ a {
 .team-hero{
     margin-bottom: 8px;
 }
-.contact-link-team{
+.contact-link-team,
+.contact-link-footer
+{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -283,6 +294,10 @@ a {
 .contact-link-team:focus {
     background-color: #404BBF;
 }
+.contact-link-footer:hover,
+.contact-link-footer:focus {
+    background-color:#31d0aa;
+}
 .contact-icon{
     fill: #F4F4FD;
 }
@@ -295,10 +310,11 @@ a {
 
 .portfolio-thumb {
     position: relative;
+    overflow: hidden;
 }
 .overlay {
     padding: 40px 32px;
-    background-color: #3f51b5;
+    background-color: #4D5AE5;
     color:#F4F4FD;
     font-family: sans-serif;
     font-weight: 400;
@@ -310,7 +326,7 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    transform: translateY(200%);
+    transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: absolute;
 }
@@ -324,9 +340,13 @@ a {
 .portfolio-item{
     width: calc((100% - 24px * 2) / 3);
     position: relative;
-    overflow: hidden;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
+}
+.portfolio-item:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+        0 1px 1px 0 rgba(46, 47, 66, 0.16),
+        0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 .portfolio-content{
     border-left: 1px solid #e7e9fc;
@@ -341,7 +361,8 @@ a {
 
 }
 
-.team-hero, .team-description{
+.team-hero,
+.team-description{
     text-align: center;
 }
 .logo-footer{
